ci: action update

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-elixir@v1
       with:
         elixir-version: ${{ matrix.elixir-version }} # Define the elixir version [required]
         otp-version: ${{ matrix.otp-version }} # Define the OTP version [required]
@@ -48,7 +48,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-elixir@v1
       with:
         elixir-version: 1.11.x
         otp-version: 23.x
