--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -68,3 +68,25 @@ jobs:
       with:
         name: docs
         path: doc
+
+  static_analysis:
+
+    name: Static code analysis
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Elixir
+      uses: erlef/setup-elixir@v1
+      with:
+        elixir-version: 1.11.x
+        otp-version: 23.x
+    - name: Restore dependencies cache
+      uses: actions/cache@v2
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+    - name: Install dependencies
+      run: mix deps.get
+    - name: Run dialyzer
+      run: mix dialyzer
